# SMA-ENTERPRISE

./: .gitignore  TODO.md  docker-compose.yml  pipeline_architecture_explained.md.resolved  pyproject.toml
api/: __init__.py  main.py
api/routes/: __init__.py  content.py  download.py  health.py  media.py  scheduler.py  social.py
config/: __init__.py  base.py  dev.py  loader.py  prod.py
core/: celery_app.py  logging_utils.py  paths.py
db/: base.py  database.py  stories.py
docker/inference/: Dockerfile.inference  Dockerfile.inference.dockerignore
docker/network/: Dockerfile.networks
services/: chains.py
services/analytics/: __init__.py  collector.py
services/inference/: __init__.py  client.py
services/inference/agents/: __init__.py  content_agent.py  tools.py
services/inference/prompts/: __init__.py  caption.py  hashtag.py  story.py
services/mcp_server/: __init__.py  server.py
services/media/: __init__.py  subtitles.py  tasks.py  thumbnail.py  tts.py  video_assembler.py
services/resources_downloader/: engine.py  tasks.py
services/resources_downloader/pipelines/: base.py  pexels.py  pipelines_types.py  registry.py
services/scheduler/: __init__.py  calendar.py  tasks.py
services/scraper/: __init__.py  engine.py
services/scraper/spiders/: __init__.py  competitor.py  hashtag_spider.py  trend_spider.py
services/social/: __init__.py  base.py  instagram.py  manager.py  reddit.py  twitter.py  youtube.py
